--- a/src/pages/alfonPage.module.css
+++ b/src/pages/alfonPage.module.css
@@ -1,18 +1,38 @@
-.table
+
+.grid {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .ag-theme-alpine {
+    direction: rtl; /* Enables RTL layout */
+  }
+  
+
+
+
+
+
+
+
+
+
+/* .table
 {
     width: 95%;
     border-collapse: collapse;
     margin: 0 auto;
+    table-layout: fixed;
+
 }
-.table th
-{
-    border: 1px solid #000;
-    padding: 5px;
-}
+.table th,
 .table td
 {
     border: 1px solid #000;
     padding: 5px;
+    overflow: hidden;
+  text-overflow: ellipsis;
+
 }
 .table td input
 {
@@ -23,3 +43,9 @@
 {
     outline: none;
 }
+.table input[type="text"] {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+   */
