--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,14 @@
   direction: rtl;
   font-family: Arial, Helvetica, sans-serif;
 }
+.custom-theme
+ {
+   --ag-header-background-color: rgb(181, 227, 245);
+    --ag-background-color:rgb(233, 241, 243);
+    --ag-odd-row-background-color: rgb(233, 241, 243);
+
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
